[tool.poetry]
name = "langgraph-iwf-temporal"
version = "0.1.0"
description = "A library on top of iWF/Temporal to define workflow in LangGraph's Graph APIs (node+edges)"
authors = ["Indeed <opensource@indeed.com>"]
readme = "README.md"
packages = [{include = "langgraph_iwf_temporal"}]

[tool.poetry.dependencies]
python = "^3.9"
iwf-python-sdk = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 